--- a/index.ipynb
+++ b/index.ipynb
@@ -19,7 +19,8 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "\n",
+    "NoSQL is not relational - that means it doesn't have to follow the relational format and structure. It can be stored in many different ways, and the person storing it doesn't necessarily have to know the structure beforehand. \n",
+    "Neither is better; they're used for different purposes.\n",
     "\n",
     "\n",
     "\n",
@@ -32,7 +33,7 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "\n",
+    "A NoSQL database would likely be the best fit for a scenario where every document or entry has a different structure. \n",
     "\n",
     "\n",
     "\n",
@@ -44,7 +45,8 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "\n",
+    "MongoDB is a document store database. Each entry is a document, and each document stores key-value pairs. The data is stored as the value, and the key is queried against.\n",
+    "This is different from a relational database for the same reasons listed above - it's dynamic and unstructured. Each document can have a different structure from the other documents.\n",
     "\n",
     "\n",
     "\n",
@@ -58,7 +60,7 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "\n",
+    "Fault tolerance defines a database's ability to deliver accurate and complete results while one or more components is unresponsive. RDDs must be fault tolerant, even though they're distributed. Applications like Hadoop and Spark are used for this purpose.\n",
     "\n",
     "\n",
     "\n",
@@ -72,8 +74,9 @@
     "Write your answer below this line: \n",
     "_______________________________________________________________________________________________________________________________\n",
     "\n",
-    "\n",
-    "\n",
+    "MapReduce refers to two different things - map AND reduce.\n",
+    "Map refers to running a query in a distributed system on each server simultaneously.\n",
+    "Reduce refers to combining the results of those distributed queries.\n",
     "\n",
     "## Summary\n",
     "\n",
@@ -98,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
